set light and dark mode correctly

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,18 @@
   --color-accent1: var(--accent1);
   --color-accent2: var(--accent2);
 
+  --shadow-main: 0 4px 6px -1px var(--color-details);
+
   --font-signika: "Signika", sans-serif;
   --font-rubik: "Rubik", sans-serif;
+
+  /* Статические цвета */
+  --color-static-bg1: var(--static-bg1);
+  --color-static-bg2: var(--static-bg2);
+  --color-static-text: var(--static-text);
+  --color-static-details: var(--static-details);
+  --color-static-accent1: var(--static-accent1);
+  --color-static-accent2: var(--static-accent2);
 }
 
 @layer components {
@@ -25,12 +35,22 @@
 }
 
 :root {
+  /* Динамичные (переключаемые) переменные */
   --bg1: #f7fdff;
   --bg2: #e9f8f1;
   --text: #374151;
   --details: #6fafa8;
   --accent1: #a3d2ca;
   --accent2: #f6caca;
+
+  /* Статичные переменные */
+  --static-bg1: #f7fdff;
+  --static-bg2: #e9f8f1;
+  --static-text: #374151;
+  --static-details: #6fafa8;
+  --static-accent1: #a3d2ca;
+  --static-accent2: #f6caca;
+
   --logo-filter: brightness(0) saturate(100%) invert(100%) sepia(0%)
     saturate(7488%) hue-rotate(152deg) brightness(106%) contrast(103%);
 }
@@ -42,6 +62,8 @@
   --details: #87d6ce;
   --accent1: #a8e6dd;
   --accent2: #f8bcbc;
+
+  /* Статичные не переопределяются */
   --logo-filter: brightness(0) saturate(100%) invert(24%) sepia(31%)
     saturate(393%) hue-rotate(178deg) brightness(92%) contrast(92%);
 }
